[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/StationaryLight.png" type="Texture" id=1]
[ext_resource path="res://TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://Sprites/JMH Typewriter-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/blackCover.png" type="Texture" id=4]
[ext_resource path="res://Contest.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 37
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 2 )

[node name="BlackCover" type="Sprite" parent="."]
position = Vector2( 515, 249 )
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 517, 249 )
texture = ExtResource( 1 )

[node name="Description" type="Label" parent="."]
margin_left = 484.0
margin_top = 352.0
margin_right = 558.0
margin_bottom = 373.0
grow_horizontal = 2
custom_fonts/font = SubResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="GridContainer" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 480.0
margin_top = 204.0
margin_right = 554.0
margin_bottom = 344.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="GridContainer"]
margin_right = 74.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )

[node name="EasyButton" type="Button" parent="GridContainer"]
margin_top = 51.0
margin_right = 74.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 2 )
toggle_mode = true
text = "Easy"

[node name="MedButton" type="Button" parent="GridContainer"]
margin_top = 82.0
margin_right = 74.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 2 )
toggle_mode = true
text = "Medium"

[node name="HardButton" type="Button" parent="GridContainer"]
margin_top = 113.0
margin_right = 74.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 2 )
toggle_mode = true
text = "Hard"

[node name="Contest" parent="." instance=ExtResource( 5 )]
position = Vector2( 528, 489 )

[connection signal="mouse_entered" from="GridContainer/EasyButton" to="." method="_on_EasyButton_mouse_entered"]
[connection signal="pressed" from="GridContainer/EasyButton" to="." method="_on_EasyButton_pressed"]
[connection signal="mouse_entered" from="GridContainer/MedButton" to="." method="_on_MedButton_mouse_entered"]
[connection signal="pressed" from="GridContainer/MedButton" to="." method="_on_MedButton_pressed"]
[connection signal="mouse_entered" from="GridContainer/HardButton" to="." method="_on_HardButton_mouse_entered"]
[connection signal="pressed" from="GridContainer/HardButton" to="." method="_on_HardButton_pressed"]
